src/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones : definiciones definicion
   3               |

   4  definicion : definicionVariable
   5             | definicionStruct
   6             | definicionFuncion

   7  definicionVariable : VAR ID ':' tipo ';'

   8  definicionVariableLocal : VAR ID ':' tipo ';'

   9  definicionesParametros : definicionParametros
  10                         |

  11  definicionParametros : definicionParametro
  12                       | definicionParametros ',' definicionParametro

  13  definicionParametro : ID ':' tipo

  14  tipo : ENTERO
  15       | REAL
  16       | CHAR
  17       | ID
  18       | '[' LITERAL_ENTERO ']' tipo

  19  definicionStruct : STRUCT ID '{' definicionCampos '}' ';'

  20  definicionCampos : definicionCampo
  21                   | definicionCampos definicionCampo

  22  definicionCampo : ID ':' tipo ';'

  23  definicionFuncion : ID '(' definicionesParametros ')' definicionReturn '{' cuerpo '}'

  24  definicionReturn : ':' tipo
  25                   |

  26  cuerpo : definicionVariablesFuncion sentencias

  27  definicionVariablesFuncion : definicionVariablesFuncion definicionVariableLocal
  28                             |

  29  sentencias : sentencias sentencia
  30             |

  31  sentencia : asignacion
  32            | escritura
  33            | lectura
  34            | condicional
  35            | iterativa
  36            | retorno
  37            | invocacionProcedimiento

  38  invocacionProcedimiento : ID '(' argumentos ')' ';'

  39  invocacionFuncion : ID '(' argumentos ')'

  40  asignacion : expresion '=' expresion ';'
  41             | expresion '=' '{' expresiones '}' ';'

  42  expresiones : expresion
  43              | expresiones ',' expresion

  44  escritura : PRINT expresion ';'
  45            | PRINTSP expresion ';'
  46            | PRINTLN expresion ';'
  47            | PRINTLN ';'

  48  lectura : READ expresion ';'

  49  condicional : IF '(' expresion ')' '{' sentencias '}'
  50              | IF '(' expresion ')' '{' sentencias '}' ELSE '{' sentencias '}'

  51  iterativa : WHILE '(' expresion ')' '{' sentencias '}'

  52  retorno : RETURN expresion ';'
  53          | RETURN ';'
  54          | RETURN NULL

  55  expresion : LITERAL_ENTERO
  56            | LITERAL_REAL
  57            | LITERAL_CHAR
  58            | ID
  59            | expresion '+' expresion
  60            | expresion '-' expresion
  61            | expresion '*' expresion
  62            | expresion '/' expresion
  63            | expresion '<' expresion
  64            | expresion '>' expresion
  65            | expresion MENOR_IGUAL expresion
  66            | expresion MAYOR_IGUAL expresion
  67            | expresion IGUAL_QUE expresion
  68            | expresion DISTINTO expresion
  69            | expresion AND expresion
  70            | expresion OR expresion
  71            | '!' expresion
  72            | '(' expresion ')'
  73            | invocacionFuncion
  74            | CAST '<' tipo '>' '(' expresion ')'
  75            | expresion '[' expresion ']'
  76            | expresion '.' ID
  77            | '-' expresion

  78  argumentos : argumento
  79             |

  80  argumento : expresion
  81            | argumento ',' expresion

state 0
	$accept : . programa $end  (0)
	definiciones : .  (3)

	.  reduce 3

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (2)

	VAR  shift 3
	STRUCT  shift 4
	ID  shift 5
	$end  reduce 1

	definicion  goto 6
	definicionVariable  goto 7
	definicionStruct  goto 8
	definicionFuncion  goto 9


state 3
	definicionVariable : VAR . ID ':' tipo ';'  (7)

	ID  shift 10
	.  error


state 4
	definicionStruct : STRUCT . ID '{' definicionCampos '}' ';'  (19)

	ID  shift 11
	.  error


state 5
	definicionFuncion : ID . '(' definicionesParametros ')' definicionReturn '{' cuerpo '}'  (23)

	'('  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (2)

	.  reduce 2


state 7
	definicion : definicionVariable .  (4)

	.  reduce 4


state 8
	definicion : definicionStruct .  (5)

	.  reduce 5


state 9
	definicion : definicionFuncion .  (6)

	.  reduce 6


state 10
	definicionVariable : VAR ID . ':' tipo ';'  (7)

	':'  shift 13
	.  error


state 11
	definicionStruct : STRUCT ID . '{' definicionCampos '}' ';'  (19)

	'{'  shift 14
	.  error


state 12
	definicionFuncion : ID '(' . definicionesParametros ')' definicionReturn '{' cuerpo '}'  (23)
	definicionesParametros : .  (10)

	ID  shift 15
	')'  reduce 10

	definicionesParametros  goto 16
	definicionParametros  goto 17
	definicionParametro  goto 18


state 13
	definicionVariable : VAR ID ':' . tipo ';'  (7)

	ENTERO  shift 19
	REAL  shift 20
	CHAR  shift 21
	ID  shift 22
	'['  shift 23
	.  error

	tipo  goto 24


state 14
	definicionStruct : STRUCT ID '{' . definicionCampos '}' ';'  (19)

	ID  shift 25
	.  error

	definicionCampos  goto 26
	definicionCampo  goto 27


state 15
	definicionParametro : ID . ':' tipo  (13)

	':'  shift 28
	.  error


state 16
	definicionFuncion : ID '(' definicionesParametros . ')' definicionReturn '{' cuerpo '}'  (23)

	')'  shift 29
	.  error


state 17
	definicionesParametros : definicionParametros .  (9)
	definicionParametros : definicionParametros . ',' definicionParametro  (12)

	','  shift 30
	')'  reduce 9


state 18
	definicionParametros : definicionParametro .  (11)

	.  reduce 11


state 19
	tipo : ENTERO .  (14)

	.  reduce 14


state 20
	tipo : REAL .  (15)

	.  reduce 15


state 21
	tipo : CHAR .  (16)

	.  reduce 16


state 22
	tipo : ID .  (17)

	.  reduce 17


state 23
	tipo : '[' . LITERAL_ENTERO ']' tipo  (18)

	LITERAL_ENTERO  shift 31
	.  error


state 24
	definicionVariable : VAR ID ':' tipo . ';'  (7)

	';'  shift 32
	.  error


state 25
	definicionCampo : ID . ':' tipo ';'  (22)

	':'  shift 33
	.  error


state 26
	definicionStruct : STRUCT ID '{' definicionCampos . '}' ';'  (19)
	definicionCampos : definicionCampos . definicionCampo  (21)

	ID  shift 25
	'}'  shift 34
	.  error

	definicionCampo  goto 35


state 27
	definicionCampos : definicionCampo .  (20)

	.  reduce 20


state 28
	definicionParametro : ID ':' . tipo  (13)

	ENTERO  shift 19
	REAL  shift 20
	CHAR  shift 21
	ID  shift 22
	'['  shift 23
	.  error

	tipo  goto 36


state 29
	definicionFuncion : ID '(' definicionesParametros ')' . definicionReturn '{' cuerpo '}'  (23)
	definicionReturn : .  (25)

	':'  shift 37
	'{'  reduce 25

	definicionReturn  goto 38


state 30
	definicionParametros : definicionParametros ',' . definicionParametro  (12)

	ID  shift 15
	.  error

	definicionParametro  goto 39


state 31
	tipo : '[' LITERAL_ENTERO . ']' tipo  (18)

	']'  shift 40
	.  error


state 32
	definicionVariable : VAR ID ':' tipo ';' .  (7)

	.  reduce 7


state 33
	definicionCampo : ID ':' . tipo ';'  (22)

	ENTERO  shift 19
	REAL  shift 20
	CHAR  shift 21
	ID  shift 22
	'['  shift 23
	.  error

	tipo  goto 41


state 34
	definicionStruct : STRUCT ID '{' definicionCampos '}' . ';'  (19)

	';'  shift 42
	.  error


state 35
	definicionCampos : definicionCampos definicionCampo .  (21)

	.  reduce 21


state 36
	definicionParametro : ID ':' tipo .  (13)

	.  reduce 13


state 37
	definicionReturn : ':' . tipo  (24)

	ENTERO  shift 19
	REAL  shift 20
	CHAR  shift 21
	ID  shift 22
	'['  shift 23
	.  error

	tipo  goto 43


state 38
	definicionFuncion : ID '(' definicionesParametros ')' definicionReturn . '{' cuerpo '}'  (23)

	'{'  shift 44
	.  error


state 39
	definicionParametros : definicionParametros ',' definicionParametro .  (12)

	.  reduce 12


state 40
	tipo : '[' LITERAL_ENTERO ']' . tipo  (18)

	ENTERO  shift 19
	REAL  shift 20
	CHAR  shift 21
	ID  shift 22
	'['  shift 23
	.  error

	tipo  goto 45


state 41
	definicionCampo : ID ':' tipo . ';'  (22)

	';'  shift 46
	.  error


state 42
	definicionStruct : STRUCT ID '{' definicionCampos '}' ';' .  (19)

	.  reduce 19


state 43
	definicionReturn : ':' tipo .  (24)

	.  reduce 24


state 44
	definicionFuncion : ID '(' definicionesParametros ')' definicionReturn '{' . cuerpo '}'  (23)
	definicionVariablesFuncion : .  (28)

	.  reduce 28

	cuerpo  goto 47
	definicionVariablesFuncion  goto 48


state 45
	tipo : '[' LITERAL_ENTERO ']' tipo .  (18)

	.  reduce 18


state 46
	definicionCampo : ID ':' tipo ';' .  (22)

	.  reduce 22


state 47
	definicionFuncion : ID '(' definicionesParametros ')' definicionReturn '{' cuerpo . '}'  (23)

	'}'  shift 49
	.  error


state 48
	cuerpo : definicionVariablesFuncion . sentencias  (26)
	definicionVariablesFuncion : definicionVariablesFuncion . definicionVariableLocal  (27)
	sentencias : .  (30)

	VAR  shift 50
	IF  reduce 30
	WHILE  reduce 30
	READ  reduce 30
	PRINT  reduce 30
	PRINTSP  reduce 30
	PRINTLN  reduce 30
	RETURN  reduce 30
	CAST  reduce 30
	ID  reduce 30
	LITERAL_ENTERO  reduce 30
	LITERAL_REAL  reduce 30
	LITERAL_CHAR  reduce 30
	'!'  reduce 30
	'-'  reduce 30
	'('  reduce 30
	'}'  reduce 30

	definicionVariableLocal  goto 51
	sentencias  goto 52


state 49
	definicionFuncion : ID '(' definicionesParametros ')' definicionReturn '{' cuerpo '}' .  (23)

	.  reduce 23


state 50
	definicionVariableLocal : VAR . ID ':' tipo ';'  (8)

	ID  shift 53
	.  error


state 51
	definicionVariablesFuncion : definicionVariablesFuncion definicionVariableLocal .  (27)

	.  reduce 27


state 52
	cuerpo : definicionVariablesFuncion sentencias .  (26)
	sentencias : sentencias . sentencia  (29)

	IF  shift 54
	WHILE  shift 55
	READ  shift 56
	PRINT  shift 57
	PRINTSP  shift 58
	PRINTLN  shift 59
	RETURN  shift 60
	CAST  shift 61
	ID  shift 62
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	'}'  reduce 26

	sentencia  goto 69
	asignacion  goto 70
	escritura  goto 71
	lectura  goto 72
	condicional  goto 73
	iterativa  goto 74
	retorno  goto 75
	invocacionProcedimiento  goto 76
	invocacionFuncion  goto 77
	expresion  goto 78


state 53
	definicionVariableLocal : VAR ID . ':' tipo ';'  (8)

	':'  shift 79
	.  error


state 54
	condicional : IF . '(' expresion ')' '{' sentencias '}'  (49)
	condicional : IF . '(' expresion ')' '{' sentencias '}' ELSE '{' sentencias '}'  (50)

	'('  shift 80
	.  error


state 55
	iterativa : WHILE . '(' expresion ')' '{' sentencias '}'  (51)

	'('  shift 81
	.  error


state 56
	lectura : READ . expresion ';'  (48)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 83


state 57
	escritura : PRINT . expresion ';'  (44)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 84


state 58
	escritura : PRINTSP . expresion ';'  (45)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 85


state 59
	escritura : PRINTLN . expresion ';'  (46)
	escritura : PRINTLN . ';'  (47)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	';'  shift 86
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 87


state 60
	retorno : RETURN . expresion ';'  (52)
	retorno : RETURN . ';'  (53)
	retorno : RETURN . NULL  (54)

	CAST  shift 61
	NULL  shift 88
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	';'  shift 89
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 90


state 61
	expresion : CAST . '<' tipo '>' '(' expresion ')'  (74)

	'<'  shift 91
	.  error


state 62
	invocacionProcedimiento : ID . '(' argumentos ')' ';'  (38)
	invocacionFuncion : ID . '(' argumentos ')'  (39)
	expresion : ID .  (58)

	'('  shift 92
	MAYOR_IGUAL  reduce 58
	MENOR_IGUAL  reduce 58
	IGUAL_QUE  reduce 58
	DISTINTO  reduce 58
	AND  reduce 58
	OR  reduce 58
	'<'  reduce 58
	'>'  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	'/'  reduce 58
	'['  reduce 58
	'.'  reduce 58
	'='  reduce 58


state 63
	expresion : LITERAL_ENTERO .  (55)

	.  reduce 55


state 64
	expresion : LITERAL_REAL .  (56)

	.  reduce 56


state 65
	expresion : LITERAL_CHAR .  (57)

	.  reduce 57


state 66
	expresion : '!' . expresion  (71)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 93


state 67
	expresion : '-' . expresion  (77)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 94


state 68
	expresion : '(' . expresion ')'  (72)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 95


state 69
	sentencias : sentencias sentencia .  (29)

	.  reduce 29


state 70
	sentencia : asignacion .  (31)

	.  reduce 31


state 71
	sentencia : escritura .  (32)

	.  reduce 32


state 72
	sentencia : lectura .  (33)

	.  reduce 33


state 73
	sentencia : condicional .  (34)

	.  reduce 34


state 74
	sentencia : iterativa .  (35)

	.  reduce 35


state 75
	sentencia : retorno .  (36)

	.  reduce 36


state 76
	sentencia : invocacionProcedimiento .  (37)

	.  reduce 37


state 77
	expresion : invocacionFuncion .  (73)

	.  reduce 73


state 78
	asignacion : expresion . '=' expresion ';'  (40)
	asignacion : expresion . '=' '{' expresiones '}' ';'  (41)
	expresion : expresion . '+' expresion  (59)
	expresion : expresion . '-' expresion  (60)
	expresion : expresion . '*' expresion  (61)
	expresion : expresion . '/' expresion  (62)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . MENOR_IGUAL expresion  (65)
	expresion : expresion . MAYOR_IGUAL expresion  (66)
	expresion : expresion . IGUAL_QUE expresion  (67)
	expresion : expresion . DISTINTO expresion  (68)
	expresion : expresion . AND expresion  (69)
	expresion : expresion . OR expresion  (70)
	expresion : expresion . '[' expresion ']'  (75)
	expresion : expresion . '.' ID  (76)

	MAYOR_IGUAL  shift 96
	MENOR_IGUAL  shift 97
	IGUAL_QUE  shift 98
	DISTINTO  shift 99
	AND  shift 100
	OR  shift 101
	'<'  shift 102
	'>'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'['  shift 108
	'.'  shift 109
	'='  shift 110
	.  error


state 79
	definicionVariableLocal : VAR ID ':' . tipo ';'  (8)

	ENTERO  shift 19
	REAL  shift 20
	CHAR  shift 21
	ID  shift 22
	'['  shift 23
	.  error

	tipo  goto 111


state 80
	condicional : IF '(' . expresion ')' '{' sentencias '}'  (49)
	condicional : IF '(' . expresion ')' '{' sentencias '}' ELSE '{' sentencias '}'  (50)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 112


state 81
	iterativa : WHILE '(' . expresion ')' '{' sentencias '}'  (51)

	CAST  shift 61
	ID  shift 82
	LITERAL_ENTERO  shift 63
	LITERAL_REAL  shift 64
	LITERAL_CHAR  shift 65
	'!'  shift 66
	'-'  shift 67
	'('  shift 68
	.  error

	invocacionFuncion  goto 77
	expresion  goto 113


state 82
	invocacionFuncion : ID . '(' argumentos ')'  (39)
	expresion : ID .  (58)

	'('  shift 114
	MAYOR_IGUAL  reduce 58
	MENOR_IGUAL  reduce 58
	IGUAL_QUE  reduce 58
	DISTINTO  reduce 58
	AND  reduce 58
	OR  reduce 58
	'<'  reduce 58
	'>'  reduce 58
	'+'  reduce 58
	'-'  reduce 58
	'*'  reduce 58
	'/'  reduce 58
	'['  reduce 58
	']'  reduce 58
	'.'  reduce 58
	','  reduce 58
	';'  reduce 58
	')'  reduce 58
	'}'  reduce 58
	'='  reduce 58


state 83
	lectura : READ expresion . ';'  (48)
	expresion : expresion . '+' expresion  (59)
	expresion : expresion . '-' expresion  (60)
	expresion : expresion . '*' expresion  (61)
	expresion : expresion . '/' expresion  (62)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . MENOR_IGUAL expresion  (65)
	expresion : expresion . MAYOR_IGUAL expresion  (66)
	expresion : expresion . IGUAL_QUE expresion  (67)
	expresion : expresion . DISTINTO expresion  (68)
	expresion : expresion . AND expresion  (69)
	expresion : expresion . OR expresion  (70)
	expresion : expresion . '[' expresion ']'  (75)
	expresion : expresion . '.' ID  (76)

	MAYOR_IGUAL  shift 96
	MENOR_IGUAL  shift 97
	IGUAL_QUE  shift 98
	DISTINTO  shift 99
	AND  shift 100
	OR  shift 101
	'<'  shift 102
	'>'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'['  shift 108
	'.'  shift 109
	';'  shift 115
	.  error


state 84
	escritura : PRINT expresion . ';'  (44)
	expresion : expresion . '+' expresion  (59)
	expresion : expresion . '-' expresion  (60)
	expresion : expresion . '*' expresion  (61)
	expresion : expresion . '/' expresion  (62)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . MENOR_IGUAL expresion  (65)
	expresion : expresion . MAYOR_IGUAL expresion  (66)
	expresion : expresion . IGUAL_QUE expresion  (67)
	expresion : expresion . DISTINTO expresion  (68)
	expresion : expresion . AND expresion  (69)
	expresion : expresion . OR expresion  (70)
	expresion : expresion . '[' expresion ']'  (75)
	expresion : expresion . '.' ID  (76)

	MAYOR_IGUAL  shift 96
	MENOR_IGUAL  shift 97
	IGUAL_QUE  shift 98
	DISTINTO  shift 99
	AND  shift 100
	OR  shift 101
	'<'  shift 102
	'>'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'['  shift 108
	'.'  shift 109
	';'  shift 116
	.  error


state 85
	escritura : PRINTSP expresion . ';'  (45)
	expresion : expresion . '+' expresion  (59)
	expresion : expresion . '-' expresion  (60)
	expresion : expresion . '*' expresion  (61)
	expresion : expresion . '/' expresion  (62)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . MENOR_IGUAL expresion  (65)
	expresion : expresion . MAYOR_IGUAL expresion  (66)
	expresion : expresion . IGUAL_QUE expresion  (67)
	expresion : expresion . DISTINTO expresion  (68)
	expresion : expresion . AND expresion  (69)
	expresion : expresion . OR expresion  (70)
	expresion : expresion . '[' expresion ']'  (75)
	expresion : expresion . '.' ID  (76)

	MAYOR_IGUAL  shift 96
	MENOR_IGUAL  shift 97
	IGUAL_QUE  shift 98
	DISTINTO  shift 99
	AND  shift 100
	OR  shift 101
	'<'  shift 102
	'>'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'['  shift 108
	'.'  shift 109
	';'  shift 117
	.  error


state 86
	escritura : PRINTLN ';' .  (47)

	.  reduce 47


state 87
	escritura : PRINTLN expresion . ';'  (46)
	expresion : expresion . '+' expresion  (59)
	expresion : expresion . '-' expresion  (60)
	expresion : expresion . '*' expresion  (61)
	expresion : expresion . '/' expresion  (62)
	expresion : expresion . '<' expresion  (63)
	expresion : expresion . '>' expresion  (64)
	expresion : expresion . MENOR_IGUAL expresion  (65)
	expresion : expresion . MAYOR_IGUAL expresion  (66)
	expresion : expresion . IGUAL_QUE expresion  (67)
	expresion : expresion . DISTINTO expresion  (68)
	expresion : expresion . AND expresion  (69)
	expresion : expresion . OR expresion  (70)
	expresion : expresion . '[' expresion ']'  (75)
	expresion : expresion . '.' ID  (76)

	MAYOR_IGUAL  shift 96
	MENOR_IGUAL  shift 97
	IGUAL_QUE  shift 98
	DISTINTO  shift 99
	AND  shift 100
	OR  shift 101
	'<'  shift 102
	'>'  shift 103
	'+'  shift 104
	'-'  shift 105
	'*'  shift 106
	'/'  shift 107
	'['  shift 108
	'.'  shift 109
	';'  shift 118
	.  error


state 88
	retorno : RETURN NULL .  (54)

	.  reduce 54


state 89
	retorno : RETURN ';' .  (53)

	.  reduce 53

